--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,7 +1,7 @@
 .header {
     background: var(--white);
     color: var(--black);
-    position: relative;
+    position: fixed;
     z-index: 2;
     min-height: 56px;
     border-bottom: 1px solid var(--light-gray);
@@ -18,6 +18,7 @@
     height: 124px;
     background-repeat: no-repeat;
 }
+
 .navbar {
     max-width: 1248px;
     padding: 0 24px;
