--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -52,6 +52,10 @@ main {
     padding: 24px 16px;
     min-height: calc(100vh - 168px);
 }
+main.ngodetail-wrap {
+    height: calc(100vh - 205px);
+    overflow: auto;
+}
 .busket-icon {
     margin: 24px 0;
 }
@@ -289,6 +293,7 @@ footer a span {
     gap: 8px;
     align-items: center;
     width: 120px;
+    position: relative;
 }
 .category .block.center {
     justify-content: center;
@@ -301,6 +306,12 @@ footer a span {
     width: 16px;
     height: 16px;
     accent-color: var(--red);
+    /* position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0; */
 }
 .checkbox-wrpa label {
     color: var(--red);
@@ -313,20 +324,44 @@ footer a span {
     align-items: center;
     gap: 8px;
 }
- a:link {
+a:link {
     /* background-color: #f44336;*/
-   /* padding: 14px 25px; 
+    /* padding: 14px 25px; 
     text-align: center; */
     text-decoration: none;
     /* display: inline-block; */
-  } 
-  a:hover{
+}
+a:hover {
     color: #de2814 !important;
-  }
-  button:hover{
-    color: #f7c933!important;
+}
+button:hover {
+    color: #f7c933 !important;
     transition: all 0.3s ease-in-out !important;
-  }
-a{
+}
+
+.next-prew-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 12px;
+}
+.next-prew-button button {
+    background-color: var(--red);
+    max-width: 120px;
+    width: 100%;
+    color: var(--white);
+    border-radius: 32px;
+    border: none;
+    font-weight: 500;
     cursor: pointer;
+    margin: 0 auto;
+    display: block;
+    min-height: 32px;
+}
+.next-prew-button button:disabled,
+.next-prew-button button:disabled:hover {
+    background-color: lightgray;
+    color: gray !important;
+    cursor: not-allowed;
 }
